scrollable images in certificates

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,16 +4,16 @@
 
 @layer base {
   body {
-    @apply font-primary bg-primary text-white leading-loose;
+    @apply bg-primary font-primary leading-loose text-white;
   }
   .h1 {
-    @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold;
+    @apply text-[48px] font-semibold leading-[1.1] xl:text-[80px];
   }
   .h2 {
-    @apply text-[36px] xl:text-[48px] leading-[1.1] font-semibold;
+    @apply text-[36px] font-semibold leading-[1.1] xl:text-[48px];
   }
   .h3 {
-    @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
+    @apply text-[20px] font-semibold leading-[1.1] xl:text-[24px];
   }
   .text-outline {
     -webkit-text-stroke: 1px #ffffff;
@@ -22,4 +22,23 @@
   .text-outline-hover {
     -webkit-text-stroke: 1px #00ff99;
   }
+}
+
+/* custom scroll-bar */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 12px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #1c1c22;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #5b5454;
+  border-radius: 6px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #6e6e7a;
+}
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #807878 #1c1c22;
 }
